chat screen almost finished, started doing messages page

--- a/assets/translations/ru-RU.json
+++ b/assets/translations/ru-RU.json
@@ -1,5 +1,13 @@
 {
   "chats": "Чаты",
   "you": "Вы",
-  "search": "Поиск"
+  "search": "Поиск",
+  "yesterday": "Вчера",
+  "minutes_ago": {
+    "one": "{} минуту назад",
+    "two": "{} минуты назад",
+    "other": "{} минут назад"
+  },
+  "online": "В сети",
+  "offline": "Не в сети"
 }
