--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,3 +1,13 @@
 {
-  "variants_count": "{count} вариантов"
+  "chats": "Чаты",
+  "you": "Вы",
+  "search": "Поиск",
+  "yesterday": "Вчера",
+  "minutes_ago": {
+    "one": "{} минуту назад",
+    "two": "{} минуты назад",
+    "other": "{} минут назад"
+  },
+  "online": "В сети",
+  "offline": "Не в сети"
 }
